/**
 * Cette énumération énumère les différents alignement possibles d'un navire sur la grille de jeu.
 */
public enum Alignement {
    HORIZONTAL,
    VERTICAL
}
