/**
 * Cette classe représente un Navire de type ContreTorpilleur
 */
public class ContreTorpilleur extends Navire{

    public ContreTorpilleur(TypeNavire typeNavire) {
        super(typeNavire);
    }
}
