/**
 * Cette classe représente un Navire de type Croiseur.
 */
public class Croiseur extends Navire{
    public Croiseur(TypeNavire typeNavire) {
        super(typeNavire);
    }
}
