/**
 * Cette classe abstraite représente un Joueur.
 */
public abstract class Joueur {

}
