/**
 * Cette classe représente un Joueur humain.
 */
public class JoueurHumain extends Joueur {
}
