/**
 * Cette classe représente un Joueur ordinateur.
 */
public class JoueurOrdinateur extends Joueur{
}
