public class PorteAvions extends Navire{
    public PorteAvions(TypeNavire typeNavire) {
        super(typeNavire);
    }
}
