public class Torpilleur extends Navire {
    public Torpilleur(TypeNavire typeNavire) {
        super(typeNavire);
    }
}
